swi-prolog (5.8.2-2) UNRELEASED; urgency=low

  * Drop duplicate libjpeg62-dev, libxpm-dev and libxt-dev Build-Depends.
  * Replace libjpeg62-dev Build-Dependency with libjpeg-dev.
  * Fix FTBFS on GNU/kFreeBSD. Thanks to Petr Salinger <Petr.Salinger@seznam.cz>.
    (Closes: #571078)

 -- Chris Lamb <lamby@debian.org>  Wed, 24 Feb 2010 21:35:35 +0000

swi-prolog (5.8.2-1) unstable; urgency=low

  * New upstream release.
  * Re-arrange binary packages at upstream's request:
    - Rename -xpce to -x
    - Rename -jpl to -java
    - Rename "swi-prolog" to -nox and merge -clib, -http, -semweb, -sgml
      and -table into it
    - The "swi-prolog-odbc" package remains unchanged
    - A new "swi-prolog" package depends on both "swi-prolog-nox" and
      "swi-prolog-x"

 -- Chris Lamb <lamby@debian.org>  Wed, 06 Jan 2010 00:39:12 +0000

swi-prolog (5.8.0-1) unstable; urgency=low

  * New upstream release.
    - Local copy of strndup renamed to my_strndup. (Closes: #552847)
  * Replace libreadline5-dev dependencies with libreadline-dev.
  * Fix bad jpl.jar symlink in "main" swi-prolog package by using
    debian/swi-prolog-jpl.links instead of specifying it in debian/rules
    to ensure it ends up in the right package. (Closes: #549628)

 -- Chris Lamb <lamby@debian.org>  Thu, 29 Oct 2009 19:17:06 +0000

swi-prolog (5.6.64-3) unstable; urgency=low

  * Include CHR library in swi-prolog package. (Closes: #541183)
  * Bump Standards-Version to 3.8.3.

 -- Chris Lamb <lamby@debian.org>  Tue, 25 Aug 2009 03:55:20 +0100

swi-prolog (5.6.64-2) unstable; urgency=low

  * Add Build-Depends on libxft-dev, libxext-dev, libice-dev, libjpeg62-dev,
    libxinerama-dev, libxpm-dev and libxt-dev for anti-aliased fonts in XPCE.
    (Closes: #527233)
  * Bump Standards-Version to 3.8.1.

 -- Chris Lamb <lamby@debian.org>  Sat, 09 May 2009 13:43:43 +0100

swi-prolog (5.6.64-1) unstable; urgency=low

  * New upstream release.
  * Fix debian/watch file.