@@ -1,2 +1,0 @@
-02_manpage_pl_section
-04_fix_hyphens_being_used_as_minus_signs_in_manpages
