@@ -1,0 +1,2 @@
+02_manpage_pl_section.diff -p1
+04_fix_hyphens_being_used_as_minus_signs_in_manpages.diff -p1
