@@ -1,7 +1,5 @@
 #!/usr/bin/make -f
 
-include /usr/share/dpatch/dpatch.make
-
 export PLARCH ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 export ARCH ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 export DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
@@ -34,7 +32,7 @@ ifeq ($(DEB_HOST_ARCH_OS),kfreebsd)
     CONFFLAGS += --without-jpl
 endif
 
-build: patch build-stamp
+build: build-stamp
 build-stamp:
 	dh_testdir
 
@@ -61,7 +59,7 @@ build-stamp:
 
 	touch $@
 
-clean: unpatch
+clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp
