@@ -4,6 +4,7 @@ swi-prolog (5.8.2-2) UNRELEASED; urgency=low
   * Replace libjpeg62-dev Build-Dependency with libjpeg-dev.
   * Fix FTBFS on GNU/kFreeBSD. Thanks to Petr Salinger <Petr.Salinger@seznam.cz>.
     (Closes: #571078)
+  * Switch to dpkg-source 3.0 (quilt) format
 
  -- Chris Lamb <lamby@debian.org>  Wed, 24 Feb 2010 21:35:35 +0000
 
